# commit

./: .gitignore  README.md  pyproject.toml
interactions/: admin.py  models.py  urls.py  views.py
interactions/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
posts/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py
posts/templates/posts/: index.html  layout.html
posts/templates/posts/components/: post_form.html  posts.html
social/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  tests.py  urls.py  views.py
social/migrations/: 0001_initial.py  0002_initial.py
social/templates/social/: following.html
social_network/: asgi.py  settings copy.py  settings.py  urls.py  wsgi.py
static/social_network/: styles.css
users/: api_urls.py  api_views.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html  register.html
